Fix page layout bugs

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,6 +12,12 @@
   text-align: center;
 }
 
+#main{
+  height:auto;
+  width: 100%;
+  text-align: center;
+}
+
 hr{
   margin: 1rem;
 }
@@ -97,16 +103,5 @@ a,
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-  }
-
-  #app {
-    display: grid;
-    padding: 0 2rem;
   }
 }
